# otmundi

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
apps/core/helpers/: sanitizers.py  validate_and_normalize.py
apps/core/management/: base_batch.py
apps/core/normalizers/: datetime.py  integers.py  strings.py
apps/core/validators/: datetime.py  integers.py  required.py  strings.py  types.py  unique.py
apps/engine/ingestion/: dto.py
apps/engine/killstats/: admin.py  apps.py  signals.py  urls.py  (+1 more)
apps/killstats/: apps.py  signals.py  urls.py  views.py
apps/monsters/: admin.py  apps.py
apps/preferences/: apps.py  urls.py  views.py
apps/snapshots/: apps.py
apps/users/: models.py
apps/worlds/: apps.py
config/: settings.py  urls.py
core/tests/: test_validators_datetime.py  test_validators_integers.py  test_validators_strings.py
core/validators/: base.py  datetime.py  strings.py
ingestion/tests/: test_validators_datetime.py  test_validators_integers.py  test_validators_strings.py
killstats/: apps.py
killstats/migrations/: 0001_initial.py
killstats/models/: __init__.py  killstat.py
killstats/tests/: test_killstat.py
monsters/: apps.py
monsters/tests/: test_monster.py
project_tests/: test_locale.py
scripts/: i18n.ps1  validate.ps1
snapshots/: apps.py
snapshots/models/: __init__.py  snapshot.py
snapshots/tests/: test_snapshot.py
templates/: base.html  home.html
templates/components/: module_card.html
theme/static_src/: package-lock.json  package.json
worlds/models/: world.py
worlds/tests/: test_world.py
(+213 files in other folders)
