[project]
name = "otmundi"
version = "0.1.0"
description = "Projeto Django para monitoramento de mundos e monstros"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework",
    "django-filter",
    "django-extensions",
    "django-environ",
    "psycopg[binary]",
]

[project.optional-dependencies]
dev = [
    "pytest-django",
    "ruff",
    "black",
    "mypy",
    "django-stubs",
    "djangorestframework-stubs",
    "commitizen",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # erros PEP8
    "F",   # erros lógicos
    "I",   # import sort (isort)
    "UP",  # melhorias modernas (pyupgrade)
]
ignore = [
    "E501"  # linha longa (black já resolve)
]

[tool.ruff.lint.isort]
known-first-party = ["worlds", "monsters", "snapshots", "killstats"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
